# template

./: .gitignore  README.md  README.md.jinja  copier.yml  main.py  main.py.jinja  pyproject.toml  pyproject.toml.jinja
src/: app.py
src/api/v1/: item.py
src/repository/: item.py
src/repository/abc/: i_item.py
src/schema/model/: item.py
src/schema/request/: item.py
src/schema/response/: item.py
src/service/: item.py
src/service/abc/: i_item.py
tests/service/: test_item.py
{{ package_name }}/: app.py
{{ package_name }}.jinja/repository/: item.py
{{ package_name }}.jinja/schema/response/: item.py
{{ package_name }}.jinja/service/: item.py
{{ package_name }}.jinja/service/abc/: i_item.py
{{ package_name }}/api/v1/: item.py
{{ package_name }}/repository/abc/: i_item.py
{{ package_name }}/schema/request/: item.py
