[project]
name = "fastapi-3-tier-template"
version = "0.1.0"
description = "A template for FastAPI projects with a 3-tier architecture."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "fastapi>=0.70.0",
    "uvicorn[standard]>=0.15.0",
    "pydantic>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
]
